# Data-Science-Project-Boilerplate

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  commands.rst  conf.py  getting-started.rst  getting_started.rst  gigi.rst  index.rst  make.bat
src/conf/: design.json  logger.json  model.json
src/data/: make_dataset.py
src/utils/: config.py  logger.py
tests/: conftest.py  test_environment.py  test_main.py
tests/unit/: test_data_collection.py  test_fixtures.py
