[tool.poetry]
name = "Data Science Project Boilerplate"
version = "0.1.1"
description = "Repo to use as a template for data science projects"
authors = ["Juri Fabbri <yureefabbri@gmail.com>"]
readme = "README.md"
packages = [
    { include = "**/*" }
]

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.4.2"
click = "^8.1.7"
coverage = "^7.5.4"
pytest = "^8.2.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
python-dotenv = ">=0.5.1"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
tqdm = "^4.66.4"
flake8-bugbear = "^24.4.26"
flake8-comprehensions = "^3.14.0"
pep8-naming = "^0.14.1"
flake8-import-order = "^0.18.2"
flake8-docstrings = "^1.7.0"
commitizen = "^3.27.0"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs|
    \.git|
    \.hg|
    \.mypy_cache|
    \.nox|
    \.tox|
    \.venv|
    _build|
    buck-out|
    build|
    dist
)/
'''


[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8-docstrings]
docstring-convention = "google"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
